force-app/main/default/objects/ssot__LoyaltyLedgerTraceability__dlm/fields/ssot__DebitLoyaltyLedgerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DebitLoyaltyLedgerId__c</fullName>
    <label>Debit Loyalty  Ledger</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DebitLoyaltyLedgerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>