force-app/main/default/objects/ssot__LoyaltyLedgerTraceability__dlm/fields/ssot__PointsNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PointsNumber__c</fullName>
    <label>Points</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PointsNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>