force-app/main/default/objects/ssot__LoyaltyLedgerTraceability__dlm/fields/ssot__rel_1729227457701_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227457701_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyLedgerTraceability_DebitLoyal_rel</label>
    <referenceTo>ssot__LoyaltyLedger__dlm</referenceTo>
    <relationshipLabel>LoyaltyLedgerTraceability_DebitLoyal_rel</relationshipLabel>
    <relationshipName>rel_1729227457701_end</relationshipName>
    <type>Lookup</type>
</CustomField>